# misis2023f-22-04-knyazev-a-p

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
.cw/photo_editors/: CMakeLists (2).txt
photo_editors/photo_editors/: CMakeLists (2).txt  flags.cpp  image.h  photo_editors.cpp  photo_editors.h
prj.codeforces/: 1165b.cpp  1352a.cpp  1692c.cpp  1873b.cpp  1873c.cpp  CMakeLists.txt
prj.codeforces/output/: 1873b  1886f
prj.cw/: CMakeLists.txt  flags.cpp  image.h  photo_editors.cpp  photo_editors.h
prj.cw/doxygen/: Doxyfile
prj.cw/doxygen/html/: dir_2a419cb70b8fe33fb217858aab4b723a.html  dir_9c4fc25b1d93d20fee66320350a2f2ef.html  dir_c58e1893875c59fc33a18c839c189851.html  doxygen_crawl.html  files.html  flags_8h.html  flags_8h_source.html  globals.html  globals_func.html  image_8h.html  image_8h_source.html  index.html  photo__editors_8cpp.html  photo__editors_8cpp_source.html  photo__editors_8h.html  photo__editors_8h_source.html
prj.cw/doxygen/html/search/: all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_d.js  classes_3.js  defines_1.js  defines_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js
prj.cw/doxygen/latex/: dir_2a419cb70b8fe33fb217858aab4b723a.tex  dir_9c4fc25b1d93d20fee66320350a2f2ef.tex  files.tex  flags_8h.tex  flags_8h_source.tex  image_8h.tex  image_8h_source.tex  photo__editors_8cpp.tex  photo__editors_8cpp_source.tex  photo__editors_8h.tex  photo__editors_8h_source.tex  refman.tex
prj.cw/doxygen/man/man3/: C__Users_knyaz_ayotgwn_source_repos_misis2023f-22-04-knyazev-a-p_prj.cw_.3  C__Users_knyaz_ayotgwn_source_repos_misis2023f-22-04-knyazev-a-p_prj.cw_photo_editor_.3  flags.h.3  image.h.3  photo_editors.cpp.3  photo_editors.h.3
prj.cw/doxygen/rtf/: dir_2a419cb70b8fe33fb217858aab4b723a.rtf  dir_9c4fc25b1d93d20fee66320350a2f2ef.rtf  flags_8h.rtf  flags_8h_source.rtf  image_8h.rtf  image_8h_source.rtf  photo__editors_8h.rtf  photo__editors_8h_source.rtf  refman.rtf
prj.cw/doxygen/xml/: Doxyfile.xml  dir_2a419cb70b8fe33fb217858aab4b723a.xml  dir_9c4fc25b1d93d20fee66320350a2f2ef.xml  dir_c58e1893875c59fc33a18c839c189851.xml  index.xml  photo__editors_8cpp.xml
prj.cw/include/image/: image.h
prj.cw/include/photoeditor/: photo_editors.h
prj.cw/photo_editor/: CMakeLists.txt  photo_editors.cpp
prj.cw/photo_editor/include/flags/: flags.h
prj.cw/photo_editor/include/image/: image.h
prj.cw/photo_editor/include/photoeditor/: photo_editors.h
prj.cw/scan/: CMakeLists.txt  output.txt  scan.cpp
prj.cw/scan/include/scan/: scan.h
scan/: CMakeLists.txt  output.txt  scan.cpp  scan.h
scan_gui/: CMakeLists.txt  scan_gui.cpp  scan_gui.h
